@@ -91,6 +91,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #3767: Convert Tk object to string in tkColorChooser.
+
 - Issue #3248: Allow placing ScrolledText in a PanedWindow.
 
 - Issue #4444: Allow assertRaises() to be used as a context handler, so that
